epic/phase-2: fix lottie anoimation layout issue

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -183,6 +183,8 @@ button:focus:not(:focus-visible) {
 
 .lottie-player {
     height: 56px;
+	max-width: 10rem;
+	margin: 0 auto;
 }
 
 canvas {
